# Reconciler

./: .gitignore  README.md  csv_columns.py  parsing.py  pyproject.toml  reconciler.py  requirements.txt  schemas.py  storage.py  textutil.py
schema/: CategorizedRecord.schema.json  DuplicateDetectionResult.schema.json  DuplicateExactItem.schema.json  DuplicateNearItem.schema.json  README.md  ReconciliationPair.schema.json  ReconciliationRecord.schema.json  ReconciliationReport.schema.json  ReconciliationSetSummary.schema.json  RunReconciliationResult.schema.json  TransactionInputRow.schema.json  index.json
tests/: test_cli.py  test_reconciler.py  test_storage.py  test_textutil.py
