[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ll-reconciler"
version = "0.1.0"
description = "Compare two transaction CSVs: matching, fuzzy merchant match, duplicates, and text reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black",
    "flake8",
]

[project.scripts]
ll-reconciler = "reconciler:main"

[tool.setuptools]
py-modules = [
    "reconciler",
    "csv_columns",
    "parsing",
    "schemas",
    "storage",
    "textutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
check_untyped_defs = true
